--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       - cache
     volumes_from:
       - app
+    init: true
     command: "php -d memory_limit=1G artisan queue:work --sleep=5 --tries=1 --timeout=0"
 
   scheduler:
